fix: correct after p2p review