@@ -1,12 +1,11 @@
 package ru.practicum.ewm.location.service;
 
 import lombok.RequiredArgsConstructor;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
+import ru.practicum.ewm.config.OffsetLimitPageable;
 import ru.practicum.ewm.exceptions.BadRequestException;
 import ru.practicum.ewm.exceptions.ObjectNotFoundException;
-import ru.practicum.ewm.location.model.*;
+import ru.practicum.ewm.location.model.Location;
 import ru.practicum.ewm.location.model.dto.LocationInputDto;
 import ru.practicum.ewm.location.model.dto.LocationMapper;
 import ru.practicum.ewm.location.model.dto.LocationOutputDto;
@@ -14,9 +13,7 @@ import ru.practicum.ewm.location.model.dto.LocationOutputDtoWithDistance;
 import ru.practicum.ewm.location.repository.LocationRepository;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-@Slf4j
 @Service
 @RequiredArgsConstructor
 public class LocationServiceImpl implements LocationService {
@@ -24,10 +21,9 @@ public class LocationServiceImpl implements LocationService {
 
     @Override
     public LocationOutputDto addLocation(LocationInputDto locationInputDto) {
-        if (locationRepository.findLocation(locationInputDto.getLat(), locationInputDto.getLon()).isPresent()) {
-            throw new BadRequestException("Location "
-                    + locationInputDto.getLat() + ":" + locationInputDto.getLon() + " is already added.");
-        }
+        locationRepository.findLocation(locationInputDto.getLat(), locationInputDto.getLon())
+                .orElseThrow(() -> new BadRequestException("Location "
+                        + locationInputDto.getLat() + ":" + locationInputDto.getLon() + " is already added."));
         Location location = LocationMapper.toLocationFromInput(locationInputDto);
         return LocationMapper.toLocationOutput(locationRepository.save(location));
     }
@@ -47,13 +43,6 @@ public class LocationServiceImpl implements LocationService {
                                                                String description,
                                                                Integer from,
                                                                Integer size) {
-        return locationRepository.searchLocations(lat, lon, distance, name, description, getPageRequest(from, size)).stream()
-                .collect(Collectors.toList());
-    }
-
-
-    private PageRequest getPageRequest(Integer from, Integer size) {
-        int page = from < size ? 0 : from / size;
-        return PageRequest.of(page, size);
+        return locationRepository.searchLocations(lat, lon, distance, name, description, OffsetLimitPageable.of(from, size)).toList();
     }
 }
